# RAT-Python-ESGI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
src/client/: agent.py  main.py
src/client/commands/: capture.py  files.py  monitoring.py  system.py
src/client/network/: connection.py
src/server/: cli.py  main.py  server.py  session.py
src/server/network/: listener.py
src/utils/: config.py  crypto.py  lib.py  logger.py  protocol.py
tests/: test_client.py  test_server.py  test_utils.py
