[tool.poetry]
name = "rat-python"
version = "0.1.0"
description = "RAT projet final - M1 Cybersécurité ESGI"
authors = ["André MARTINS <andre.martins@esgi.fr>", "Théo DELABRE <theo.delabre@esgi.fr>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^41.0"
pillow = "^10.0"
mss = "^9.0"
opencv-python = "^4.8"
pynput = "^1.7"
sounddevice = "^0.4"
scipy = "^1.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
ruff = "^0.1"
black = "^23.0"
pre-commit = "^3.5"

[tool.poetry.scripts]
rat = "src.main:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
